# point_cloud_registration

./: README.md  package.xml  setup.cfg  setup.py
launch/: point_cloud_registration.launch.py
point_cloud_registration/: get_pcd.py  testing.py  utils.py
rviz/: rviz.rviz
sdf/models/env3/: model.config  model.sdf
sdf/models/env8/: model.config  model.sdf
sdf/models/env9/: model.config  model.sdf
sdf/models/turtlebot3_realsense/: model.config  model.sdf
sdf/worlds/: empty_world.sdf  env3_world.sdf  env8_world.sdf  env9_world.sdf  house_world.sdf
urdf/: _d435.urdf.xacro  turtlebot3_burger.urdf.xacro
